# system-design

Lab1/: readme.md  workspace.dsl
Lab2/: README.md
Lab2-3/: README.md
Lab2-3/.devcontainer/: docker-compose.yaml
Lab2-3/postgresql/schemas/: 01_schema.sql  02_data.sql  03_queries.sql
Lab2-3/store/: docker-compose.yaml  openapi.yaml
Lab2-3/store/api-gateway/configs/: config.yaml  config_vars.yaml
Lab2-3/store/api-gateway/src/: main.cpp
Lab2-3/store/api-gateway/src/handlers/: gateway.cpp
Lab2-3/store/api-gateway/tests/: test_gateway.py
Lab2-3/store/cart-service/: CMakeLists.txt
Lab2-3/store/cart-service/configs/: config.yaml  config_vars.yaml
Lab2-3/store/cart-service/src/: main.cpp
Lab2-3/store/cart-service/src/handlers/: cart.cpp  cart.hpp
Lab2-3/store/cart-service/src/storage/: cart_storage.cpp  cart_storage.hpp
Lab2-3/store/cart-service/tests/: conftest.py  test_cart.py
Lab2-3/store/item-service/: CMakeLists.txt  Dockerfile
Lab2-3/store/item-service/configs/: config.yaml
Lab2-3/store/item-service/src/: main.cpp
Lab2-3/store/item-service/src/handlers/: items.cpp
Lab2-3/store/item-service/src/storage/: items_storage.cpp  items_storage.hpp
Lab2-3/store/item-service/tests/: test_items.py
Lab2-3/store/user-service/: Dockerfile
Lab2-3/store/user-service/configs/: config.yaml
Lab2-3/store/user-service/schemas/: user.yaml
Lab2-3/store/user-service/src/: main.cpp
Lab2-3/store/user-service/src/pg/: users_pg.cpp  users_pg.hpp
Lab2-3/store/user-service/tests/: test_auth.py
Lab2-6/: .gitignore  README.md  fill_db.py  project_content.txt  txt_collector.py
Lab2-6/.devcontainer/: devcontainer.json  docker-compose.yaml
Lab2-6/Lab3/: optimization.md
Lab2-6/Lab4/: schema_design.md
Lab2-6/decisions/: ADR-001.md  ADR-003.md
Lab2-6/mongo/: 01_validation.js  02_data.js  03_queries.js
Lab2-6/store/: docker-compose.yaml
Lab2-6/store/api-gateway/: CMakeLists.txt
Lab2-6/store/cart-service/: CMakeLists.txt  Dockerfile
Lab2-6/store/cart-service/configs/: config.yaml
Lab2-6/store/cart-service/schemas/: cart.yaml
Lab2-6/store/cart-service/src/: main.cpp
Lab2-6/store/cart-service/src/handlers/: cart.cpp
Lab2-6/store/cart-service/src/storage/: cart_storage.cpp  cart_storage.hpp
Lab2-6/store/cart-service/tests/: conftest.py  test_cart.py
Lab2-6/store/item-service/: CMakeLists.txt
Lab2-6/store/item-service/configs/: config.yaml
Lab2-6/store/item-service/schemas/: item.yaml
Lab2-6/store/item-service/src/: main.cpp
Lab2-6/store/item-service/src/handlers/: items.cpp  items.hpp
Lab2-6/store/item-service/src/storage/: items_storage.cpp  items_storage.hpp
Lab2-6/store/item-service/tests/: conftest.py  test_items.py
Lab2-6/store/user-service/: CMakeLists.txt
Lab2-6/store/user-service/src/handlers/: auth.hpp
Lab2-6/store/user-service/src/storage/: users_storage.hpp
Lab2/.devcontainer/: devcontainer.json
Lab2/decisions/: ADR-002.md
Lab2/store/: docker-compose.yaml
Lab2/store/api-gateway/: Dockerfile
Lab2/store/api-gateway/configs/: config_vars.yaml
Lab2/store/api-gateway/src/handlers/: gateway.cpp  gateway.hpp
Lab2/store/api-gateway/tests/: conftest.py
Lab2/store/cart-service/: CMakeLists.txt
Lab2/store/cart-service/configs/: config.yaml  config_vars.yaml
Lab2/store/cart-service/schemas/: cart.yaml
Lab2/store/cart-service/src/: main.cpp
Lab2/store/cart-service/src/handlers/: cart.cpp  cart.hpp
Lab2/store/cart-service/src/storage/: cart_storage.cpp  cart_storage.hpp
Lab2/store/cart-service/tests/: test_cart.py
Lab2/store/item-service/: CMakeLists.txt
Lab2/store/item-service/configs/: config.yaml
Lab2/store/item-service/src/: main.cpp
Lab2/store/item-service/src/storage/: items_storage.cpp  items_storage.hpp
Lab2/store/item-service/tests/: test_items.py
Lab2/store/user-service/: CMakeLists.txt
Lab2/store/user-service/configs/: config.yaml
Lab2/store/user-service/src/: main.cpp
Lab2/store/user-service/src/handlers/: auth.cpp  (+1 more)
(+2 files in other folders)
